--- a/main.css
+++ b/main.css
@@ -39,20 +39,15 @@
     font-size: 18px;
 }
 
-.dark-toggle:hover {
-    transform: scale(1.1);
-}
+.dark-toggle:hover { transform: scale(1.1); }
 
-* {
-    margin: 0;
+* { margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Montserrat', sans-serif;
 }
 
-html {
-    scroll-behavior: smooth;
-}
+html { scroll-behavior: smooth; }
 
 body {
     background-color: var(--bg-color);
@@ -65,9 +60,7 @@ body {
     min-height: 100vh;
 }
 
-main {
-    flex: 1;
-}
+main { flex: 1; }
 
 a {text-decoration: none !important}
 
@@ -130,10 +123,7 @@ a {text-decoration: none !important}
     animation: pulse 1s infinite;
 }
 
-/* banner inicial */
-.hero {
-    background: var(--painel-color);
-}
+.hero { background: var(--painel-color); }
 
 .hero-container {
     display: flex;
@@ -141,9 +131,7 @@ a {text-decoration: none !important}
     gap: 40px;
 }
 
-.hero-text {
-    flex: 1;
-}
+.hero-text { flex: 1; }
 
 .hero-text p {
     font-size: 1.1rem;
@@ -182,15 +170,9 @@ a {text-decoration: none !important}
 
 html[data-theme="dark"] .highlight { color: #d11586; }
 
-html[data-theme="dark"] .badge { 
-    color: var(--branco);
-    background-color: #4b2452;
-}
+html[data-theme="dark"] .badge { color: var(--branco); background-color: #4b2452;}
 
-.hero-image {
-    flex: 1;
-    text-align: center;
-}
+.hero-image { flex: 1; text-align: center; }
 
 .hero-image img {
     max-width: 100%;
@@ -234,9 +216,7 @@ html[data-theme="dark"] .badge {
     animation: scroll 20s linear infinite;
 }
 
-.slider-track:hover {
-    animation-play-state: paused;
-}
+.slider-track:hover { animation-play-state: paused; }
 
 .slide {
     width: 250px;
@@ -257,21 +237,12 @@ html[data-theme="dark"] .badge {
     transition: transform 0.3s ease, filter 0.4s ease;
 }
 
-.slide:hover {
-    transform: rotateY(-8px);
-}
+.slide:hover { transform: rotateY(-8px); }
 
-.slide:hover img {
-    transform: scale(1.1);
-    filter: brightness(0.9);
-}
+.slide:hover img { transform: scale(1.1); filter: brightness(0.9); }
 
-@keyframes scroll {
-    0% { transform: translateX(0); }
-    100% { transform: translateX(calc(-250px * 5)); }
-}
+@keyframes scroll { 0% { transform: translateX(0); } 100% { transform: translateX(calc(-250px * 5)); } }
 
-/* imagens especificas */
 .about { background-color: var(--painel-color); }
 
 .about-container {
@@ -280,7 +251,6 @@ html[data-theme="dark"] .badge {
     gap: 50px;
 }
 
-/* destaque img */
 .titulo-principal {
     font-size: 2.5rem;
     color: var(--text-color);
@@ -291,7 +261,6 @@ html[data-theme="dark"] .badge {
     letter-spacing: 2px;
 }
 
-/* Sub destaque das fotos */
 .sub-destaque {
     font-size: 1.4rem;
     color: var(--text-color);
@@ -301,11 +270,7 @@ html[data-theme="dark"] .badge {
     gap: 15px;
 }
 
-.sub-destaque::after {
-    content: "";
-    flex: 1;
-    height: 2px;
-}
+.sub-destaque::after { content: ""; flex: 1; height: 2px; }
 
 .galeria-secao {
     margin-bottom: 50px;
@@ -333,23 +298,13 @@ html[data-theme="dark"] .badge {
     cursor: zoom-in;
 
 }
-.galeria-grid img:hover {
-    transform: scale(1.02);
-}
+.galeria-grid img:hover { transform: scale(1.02); }
 
-.zoom-img {
-    overflow: hidden;
-    border-radius: 12px;
-    cursor: pointer;
-}
+.zoom-img { overflow: hidden; border-radius: 12px; cursor: pointer; }
 
-.zoom-img img {
-    transition: transform 0.4s ease;
-}
+.zoom-img img { transition: transform 0.4s ease; }
 
-.zoom-img:hover img {
-    transform: scale(1.08);
-}
+.zoom-img:hover img { transform: scale(1.08); }
 
 .modal {
     position: fixed;
@@ -361,11 +316,7 @@ html[data-theme="dark"] .badge {
     z-index: 10000;
 }
 
-.modal img {
-    max-width: 90%;
-    max-height: 90%;
-    border-radius: 12px;
-}
+.modal img { max-width: 90%; max-height: 90%; border-radius: 12px; }
 
 .modal-close {
     position: absolute;
@@ -406,11 +357,7 @@ html[data-theme="dark"] .badge {
     gap: 40px;
 }
 
-.social-icons {
-    display: flex;
-    gap: 15px;
-    margin-top: 20px;
-}
+.social-icons { display: flex; gap: 15px; margin-top: 20px; }
 
 .social-icons img {
     width: 35px !important;
@@ -418,9 +365,7 @@ html[data-theme="dark"] .badge {
     transition: transform 0.3s ease;
 }
 
-.social-icons img:hover {
-    transform: translateY(-5px) scale(1.1);
-}
+.social-icons img:hover { transform: translateY(-5px) scale(1.1); }
 
 /* btn flutuantes */
 .btn-agendar {
@@ -441,10 +386,7 @@ html[data-theme="dark"] .badge {
     100% { transform: scale(1); box-shadow: 0 0 0 rgba(209, 21, 134, 0); }
 }
 
-.btn-agendar:hover {
-    background-color: #b01271;
-    transform: translateY(-3px);
-}
+.btn-agendar:hover { background-color: #b01271; transform: translateY(-3px); }
 
 .whatsapp-float {
     position: fixed;
@@ -461,10 +403,7 @@ html[data-theme="dark"] .badge {
     transition: transform 0.3s ease, background-color 0.3s ease;
 }
 
-.whatsapp-float:hover {
-    transform: scale(1.15);
-    background-color: #128c7e;
-}
+.whatsapp-float:hover { transform: scale(1.15); background-color: #128c7e; }
 
 .whatsapp-float img { width: 35px; }
 
@@ -544,10 +483,7 @@ html[data-theme="dark"] .badge {
         box-sizing: border-box;
     }
 
-    .contact-wrapper {
-        display: flex;
-        flex-direction: column;
-    }
+    .contact-wrapper {display: flex; flex-direction: column; }
 
     .social-links {
         display: flex;
@@ -572,7 +508,9 @@ html[data-theme="dark"] .badge {
     }
 }
 
-@media (max-width: 768px) {.modal-prev, .modal-next {
+@media (max-width: 768px) 
+
+    {.modal-prev, .modal-next {
         font-size: 30px;
         padding: 8px 12px;
     }
@@ -581,10 +519,7 @@ html[data-theme="dark"] .badge {
 
     .modal-next { right: 10px; }
 
-    .container-header {
-        justify-content: flex-start !important;
-        gap: 20px;
-    }
+    .container-header { justify-content: flex-start !important; gap: 20px; }
 
     .container-header .btn-whats {
         display: block;
@@ -600,11 +535,7 @@ html[data-theme="dark"] .badge {
     .logo-img {order: 1;}
 }
 
-.contact-form {
-    display: flex;
-    flex-direction: column; 
-    gap: 15px;
-}
+.contact-form { display: flex; flex-direction: column; gap: 15px; }
 
 .contact-form .form-group { width: 100%; }
 
@@ -623,8 +554,8 @@ html[data-theme="dark"] .badge {
     border: none;
 }
 
-/* slogan no sobre */
 .slogan-destaque {
+
     background: linear-gradient(
         to right,
         #d7469e,
@@ -641,12 +572,15 @@ html[data-theme="dark"] .badge {
     font-weight: 700;
     border-left: 4px solid var(--magenta);
     padding-left: 15px;
+
 }
 
 @keyframes shine {
+
     to {
         background-position: 200% center;
     }
+    
 }
 
 html[data-theme="dark"] .slogan-destaque {
@@ -688,17 +622,8 @@ html[data-theme="dark"] .slogan-destaque {
     gap: 8px;
 }
 
-/* efeito do rodapé */
-.footer a:hover {
-    color: var(--magenta); 
-    transform: translateY(-2px);
-}
+.footer a:hover { color: var(--magenta); transform: translateY(-2px); }
 
-.fa-linkedin {
-    font-size: 16px;
-    color: #0077b5;
-}
+.fa-linkedin { font-size: 16px; color: #0077b5; }
 
-.footer a:hover .fa-linkedin {
-    color: var(--magenta);
-}
+.footer a:hover .fa-linkedin { color: var(--magenta); }
